--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/styles": "^5.11.2",
     "firebase": "^9.16.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
